--- a/index.Rmd
+++ b/index.Rmd
@@ -67,12 +67,8 @@ extract.week<-function(var){
 
 extract.cumulative<-function(var){
   forecasts.c<-read.csv(paste0("./forecasts/",var,"_cumulative.csv"),stringsAsFactors = F)
-  
   forecasts.c$Week.ended<-as.Date(forecasts.c$Week.ended)
-  
-  
   forecasts.c<-forecasts.c[,c("Week.ended","X2.5.","X50.","X97.5.","fit")]
-  
   colnames(forecasts.c)<-c("Week.ended","2.5%","50%","97.5%","fit")
   #forecasts.c<-forecasts.c[forecasts.c$Week.ended>=as.Date("2020-03-01"), ]
   
@@ -122,13 +118,15 @@ producePlot<-function(name){
   name.data<-reshape2::melt(name.data, id.var = c("Week.ended", "lwr", "upr"))
   
   name.data$variable<-factor(name.data$variable, levels=c("fit", "Deaths", "excess.covid"),
-                             labels=c(paste("Forecasted 06/03-", format(max(name.data$Week.ended), "%d/%m")),
-                                      "Observed all-cause", "Registered non-COVID deaths"))
+                             labels=c(paste("Forecasted 06/03 -", format(max(name.data$Week.ended),
+                                                                         "%d/%m")),
+                                      "Observed all-cause",
+                                      "Registered non-COVID deaths"))
   
   p.name<-ggplot(name.data, aes(x=Week.ended, y=value,colour=variable))+ 
     geom_ribbon(aes(ymin=lwr, ymax=upr), colour=NA, fill="gray70", alpha=0.5)+
     geom_line()+
-    scale_x_date(breaks=unique(name.data$Week.ended), date_labels="%d/%m")+
+    scale_x_date(breaks=unique(name.data$Week.ended)[c(TRUE,FALSE)], date_labels="%d/%m")+
     theme_bw(base_size=12, base_family="Helvetica")+theme_minimal()+
     theme(axis.text.x = element_text(angle=45, hjust=1))+
     scale_colour_manual(values=c("Black", "Red", "Purple"))+
@@ -136,10 +134,10 @@ producePlot<-function(name){
   
   return(p.name)
 }
-
-current_date = strsplit(as.character(Sys.Date()), '-')[[1]]
+dat_temp <- Sys.Date() #-2
+current_date = strsplit(as.character(dat_temp), '-')[[1]]
 current_year = current_date[1]
-current_week = as.numeric(strftime(c(Sys.Date()), format = "%V")) - 2
+current_week = as.numeric(strftime(c(dat_temp), format = "%V")) - 2
 filename = sprintf("publishedweek%s%s.xlsx", current_week, current_year)
 ONS_url = sprintf("https://www.ons.gov.uk/file?uri=/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/weeklyprovisionalfiguresondeathsregisteredinenglandandwales/%s/%s", current_year, filename)
 
@@ -427,40 +425,80 @@ Over the weeks ending 6 March 2020 to `r s.date`, there were `r as.character(Eng
 
 \
 
-### Wales: Deaths from week ending 06/03/2020 to week ending `r c.date`
+### England: Weekly deaths since 06/03/2020
 
 \
 
 ```{r, echo=F, warnings = F, message=FALSE, fig.align = 'center'}
-p.wales<-producePlot("Wales")+theme(plot.title=element_text(size=12),axis.text=element_text(size=12))
+library(lubridate)
 
-png(filename = "Wales_update.png",
-     width = 9, height = 6, units = "in", res = 300)
-grid.arrange(p.wales + theme(legend.position = "none"),
-             ncol=1,
-             bottom=g_legend(p.england + theme(legend.position="bottom",legend.text=element_text(size=10))))
-dev.off() -> .
+England_extract <- extract.week("England")
+England_extract<-England_extract[England_extract$Week.ended>=ymd("2020-03-05"),]
+England_extract$signal <- NULL
 
-current_Wales <- extract_row("Wales")
-Wales_all_cause <- current_Wales[,3]
-Wales_covid <- current_Wales[,2]
-Wales_other <- as.numeric(Wales_all_cause) - as.numeric(Wales_covid)
+weeklyEngfull<-England_extract %>% 
+  mutate(alldeaths = Deaths, 
+         exptd = fit,
+         per.expted=100*(fit)/(Deaths), 
+         exptd.upr = (upr),
+         per.expted.upr=100*(upr)/(Deaths),
+         exptd.lwr = (lwr),
+         per.expted.lwr=100*(lwr)/(Deaths),
+         covid.num = (Covid),
+         per.covid=100*(Covid)/(Deaths),
+         exces.ncovid = (Deaths-Covid-fit),
+         per.exces.ncovid=100*(Deaths-Covid-fit)/(Deaths),
+         exces.ncovid.lwr = (Deaths-Covid-upr),
+         per.exces.ncovid.lwr=100*(Deaths-Covid-upr)/(Deaths),
+         exces.ncovid.upr = (Deaths-Covid-lwr),
+         per.exces.ncovid.upr=100*(Deaths-Covid-lwr)/(Deaths)) %>%
+  select(Week.ended, alldeaths, exptd, per.expted, exptd.upr,per.expted.upr,exptd.lwr,per.expted.lwr,covid.num, per.covid,exces.ncovid,per.exces.ncovid,exces.ncovid.lwr,per.exces.ncovid.lwr,exces.ncovid.upr,per.exces.ncovid.upr)
 
-cumulative_Wales <- extract.cumulative("Wales")
-Wales_cumulative_all_cause <- max(as.numeric(cumulative_Wales$Deaths))
-Wales_cumulative_covid <- max(as.numeric(cumulative_Wales$Covid))
-Wales_cumulative_other <- Wales_cumulative_all_cause - Wales_cumulative_covid
-cumulative_Wales_latest <- extract_cumulative_row(cumulative_Wales)
+weeklyEngfull$alldeaths <- format(weeklyEngfull$alldeaths, big.mark=",", trim = TRUE)
+weeklyEngfull$exptd <- paste(format(round(weeklyEngfull$exptd), 
+                                    big.mark=",", trim = TRUE), " (", 
+                             format(round(weeklyEngfull$per.expted, digits = 1),
+                                    big.mark=",", trim = TRUE), "%)", sep = "")
+
+weeklyEngfull$exptd_bounds <- paste(format(round(weeklyEngfull$exptd.lwr),
+                                           big.mark=",", trim = TRUE), " - ", 
+                            format(round(weeklyEngfull$exptd.upr), 
+                                   big.mark=",", trim = TRUE), " (", 
+                            round(weeklyEngfull$per.expted.lwr, digits = 1),"% - ", 
+                            round(weeklyEngfull$per.expted.upr, digits = 1), "%)", 
+                            sep = "")
+
+weeklyEngfull$exces.ncovid <- paste(format(round(weeklyEngfull$exces.ncovid),
+                                           big.mark=",", trim = TRUE), " (", 
+                            round(weeklyEngfull$per.exces.ncovid, digits = 1), "%)",
+                            sep = "")
+
+weeklyEngfull$exces_bounds <- paste(format(round(weeklyEngfull$exces.ncovid.lwr),
+                                           big.mark=",", trim = TRUE), " - ", 
+                            format(round(weeklyEngfull$exces.ncovid.upr), 
+                                   big.mark=",", trim = TRUE), " (", 
+                            round(weeklyEngfull$per.exces.ncovid.lwr, digits = 1),
+                            "% - ", 
+                            round(weeklyEngfull$per.exces.ncovid.upr, digits = 1),
+                            "%)", sep = "")
+
+weeklyEngfull$covid.num <- paste(format(round(weeklyEngfull$covid.num), big.mark=",", trim = TRUE), " (", 
+                         round(weeklyEngfull$per.covid, digits = 1), "%)", sep = "")
+England_tab <- weeklyEngfull %>% select('Week.ended', 'alldeaths', 'exptd', 'exptd_bounds', 'covid.num', 'exces.ncovid', 'exces_bounds')
+colnames(England_tab) <- c("Week ended", 
+                           "Reported all-cause deaths", 
+                           "Expected (%)",
+                           "Expected 95% prediction interval (%)", 
+                           "COVID-19 (%)",
+                           "Excess non-COVID-19", 
+                           "Excess non-COVID-19 95% prediction interval (%)")
+
+kable(England_tab) %>%
+  kable_styling(bootstrap_options = c("striped","condensed"),full_width = F, position = "left")
+
 ```
-![](./Wales_update.png)
-
-
-In the week ending `r s.date`, there were `r as.character(Wales_all_cause)` registered all-cause deaths in Wales. These comprise of `r as.character(Wales_covid)` deaths due to COVID-19 and `r as.character(Wales_other)` deaths due to other conditions. `r string_condition_recent(current_Wales, Wales_other, 'week')`
-
-Over the weeks ending 6 March 2020 to `r s.date`, there were `r as.character(Wales_cumulative_all_cause)` cumulative registered all-cause deaths in Wales. These comprise of `r as.character(Wales_cumulative_covid)` deaths due to COVID-19 and `r as.character(Wales_cumulative_other)` deaths due to other conditions. `r string_condition_recent(cumulative_Wales_latest, Wales_cumulative_other, 'period')`
 
 \
-
 
 ### English regions: Deaths from week ending 06/03/2020 to week ending `r c.date`
 
@@ -509,6 +547,40 @@ grid.arrange(NorthWest+ theme(legend.position = "none")+ggtitle("North West")+yl
              bottom=g_legend(London + theme(legend.position="bottom",legend.text=element_text(size=18),legend.title=element_text(size=18))))
 ```
 ![](./EnglandRegions_update.png)
+
+\
+
+### Wales: Deaths from week ending 06/03/2020 to week ending `r c.date`
+
+\
+
+```{r, echo=F, warnings = F, message=FALSE, fig.align = 'center'}
+p.wales<-producePlot("Wales")+theme(plot.title=element_text(size=12),axis.text=element_text(size=12))
+
+png(filename = "Wales_update.png",
+     width = 9, height = 6, units = "in", res = 300)
+grid.arrange(p.wales + theme(legend.position = "none"),
+             ncol=1,
+             bottom=g_legend(p.england + theme(legend.position="bottom",legend.text=element_text(size=10))))
+dev.off() -> .
+
+current_Wales <- extract_row("Wales")
+Wales_all_cause <- current_Wales[,3]
+Wales_covid <- current_Wales[,2]
+Wales_other <- as.numeric(Wales_all_cause) - as.numeric(Wales_covid)
+
+cumulative_Wales <- extract.cumulative("Wales")
+Wales_cumulative_all_cause <- max(as.numeric(cumulative_Wales$Deaths))
+Wales_cumulative_covid <- max(as.numeric(cumulative_Wales$Covid))
+Wales_cumulative_other <- Wales_cumulative_all_cause - Wales_cumulative_covid
+cumulative_Wales_latest <- extract_cumulative_row(cumulative_Wales)
+```
+![](./Wales_update.png)
+
+
+In the week ending `r s.date`, there were `r as.character(Wales_all_cause)` registered all-cause deaths in Wales. These comprise of `r as.character(Wales_covid)` deaths due to COVID-19 and `r as.character(Wales_other)` deaths due to other conditions. `r string_condition_recent(current_Wales, Wales_other, 'week')`
+
+Over the weeks ending 6 March 2020 to `r s.date`, there were `r as.character(Wales_cumulative_all_cause)` cumulative registered all-cause deaths in Wales. These comprise of `r as.character(Wales_cumulative_covid)` deaths due to COVID-19 and `r as.character(Wales_cumulative_other)` deaths due to other conditions. `r string_condition_recent(cumulative_Wales_latest, Wales_cumulative_other, 'period')`
 
 \
 
